# ZeusBox

./: .gitignore  CMakeLists.txt
assets/: default.zenpackage
assets/models/: leone_12_gauge_super.glb
assets/scenes/: default.zen
assets/scripts/: CameraMovement.cpp  MovementSystem.cpp  TestSystem.cpp
assets/scripts/components/: Components.h
